2006-12-23 [paul]	2.6.1cvs68

	* src/compose.c
		change last commit to use the 'academic'
		method instead. Thanks to wwp

2006-12-23 [paul]	2.6.1cvs67

	* src/compose.c
		don't warn about empty subject when
		redirecting

2006-12-22 [colin]	2.6.1cvs66

	* src/summary_search.c
		Fix previous patch

2006-12-22 [colin]	2.6.1cvs65

	* src/gtk/gtkutils.c
	* src/imap.c
	* src/jpilot.c
	* src/summary_search.c
		A few warning fixes

2006-12-23 [paul]	

	2.7.0-rc2 released

2006-12-22 [colin]	2.6.1cvs64

	* src/toolbar.c
	* src/toolbar.h
		Add a combo to the learn spam button
	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/bogofilter/bogofilter_gtk.c
	* src/plugins/bogofilter/bogofilter.h
		Allow to store Unsure mails in a specific
		folder to make better teaching easier

2006-12-21 [wwp]	2.6.1cvs63

	* src/compose.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_spelling.c
	* src/gtk/gtkaspell.c
	* src/gtk/gtkaspell.h
		Allow spell-checking using both current and alternate dictionaries
		(thanks to Colin).

2006-12-21 [wwp]	2.6.1cvs62

	* src/gtk/gtkaspell.c
		Apply recheck_when_changing_dict (highlight all mispelled words)
		when switching to alternate dictionary.

2006-12-21 [wwp]	2.6.1cvs61

	* src/compose.c
	* src/folder_item_prefs.h
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_folder_item.c
	* src/prefs_spelling.c
	* src/gtk/gtkaspell.c
	* src/gtk/gtkaspell.h
		Add global and per-folder prefs to set the default
		alternate dictionary.

2006-12-21 [colin]	2.6.1cvs60

	* src/folder.c
		Look for folders by path in all folders
	* src/html.c
		add &mdash;

2006-12-20 [colin]	2.6.1cvs59

	* src/gtk/quicksearch.c
		Make sure in_typing is false when clearing

2006-12-20 [wwp]	2.6.1cvs58

	* configure.ac
		change manual's target dir to be LFH-compliant (thanks to Colin).

2006-12-20 [wwp]	2.6.1cvs57

	* src/prefs_common.c
	* src/prefs_summaries.c
		i18n fix and factorize patch, thanks to Fabien.

2006-12-20 [paul]	2.6.1cvs56

	* configure.ac