@@ -2176,3 +2176,4 @@
 ( cvs diff -u -r 1.15.2.40 -r 1.15.2.41 src/summary_search.c;  ) > 2.6.1cvs66.patchset
 ( cvs diff -u -r 1.382.2.344 -r 1.382.2.345 src/compose.c;  ) > 2.6.1cvs67.patchset
 ( cvs diff -u -r 1.382.2.345 -r 1.382.2.346 src/compose.c;  ) > 2.6.1cvs68.patchset
+( cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/partial_download.c;  cvs diff -u -r 1.1.4.23 -r 1.1.4.24 src/gtk/logwindow.c;  ) > 2.6.1cvs69.patchset
